# math-mcp-server

./: .gitignore  Makefile  hello.py  pyproject.toml
src/: __init__.py  main.py  math_functions.py
tests/: __init__.py  test_math_functions.py  test_mcp_server.py
