[project]
name = "math-eval-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for mathematical calculations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
math-eval-server = "src.math_eval_server.main:main"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
